--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -697,8 +697,8 @@
                 }, 500);
             },
 
-            onGetBacktestError: function (e) {
-                this.fire('ajax-error', {response: e.detail.request.response});
+            onGetBacktestError: function(e) {
+                this.async(function(){this.loading = true; this.fire('ajax-error', {response:e.detail.request.response});}, 200);
             },
 
             requestSpecializedData: function(select) {
