--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -430,6 +430,7 @@
             },
 
             onGetAllThreadsError: function (e) {
+                this.loading = true;
                 this.fire('ajax-error', {response: e.detail.request.response});
             },
 
