--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -537,6 +537,7 @@
             },
 
             onGetStrategiesError: function (e) {
+                this.loading = true;
                 this.fire('ajax-error', {response: e.detail.request.response});
             },
 
