--- a/src/components/common/backtest/aq-forwardtest-detail-item.html
+++ b/src/components/common/backtest/aq-forwardtest-detail-item.html
@@ -571,7 +571,8 @@
                     }, 1000);
             },
 
-            onGetForwardTestError: function (e) {
+            onGetForwardtestError: function (e) {
+                this.loading = true;
                 this.fire('ajax-error', {response: e.detail.request.response});
             },
 
