--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -273,6 +273,7 @@
       },
 
       onGetThreadDetailError: function(e) {
+          this.loading = true;
           this.fire('ajax-error', {response: e.detail.request.response});
       },
 
@@ -281,6 +282,7 @@
       },
 
       onGetThreadRepliesError: function(e) {
+          this.loading = true;
           this.fire('ajax-error', {response: e.detail.request.response});
       },
 
