Added support for missing page (400 series errors)

--- a/src/components/analyze/aq-analyze-backtest-comparison-dialog.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-dialog.html
@@ -346,7 +346,7 @@
             },
 
             onGetBacktestError: function(e) {
-                this.fire('ajax-error', {response: e.detail.request.response});
+                this.fire('ajax-error', {request: e.detail.request});
             },
 
             onComparisonReady: function() {
