--- a/src/components/community/aq-community-create-reply.html
+++ b/src/components/community/aq-community-create-reply.html
@@ -209,7 +209,7 @@
 
             onPostReplyError: function (e) {
                 this.loading = true;
-                this.fire('ajax-error', {response: e.detail.request.response});
+                this.fire('ajax-error', {request: e.detail.request});
             },
 
             clearEditor: function () {
