--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -274,7 +274,7 @@
 
       onGetThreadDetailError: function(e) {
           this.loading = true;
-          this.fire('ajax-error', {response: e.detail.request.response});
+          this.fire('ajax-error', {request: e.detail.request});
       },
 
       onGetThreadRepliesResponse: function(data) {
@@ -283,7 +283,7 @@
 
       onGetThreadRepliesError: function(e) {
           this.loading = true;
-          this.fire('ajax-error', {response: e.detail.request.response});
+          this.fire('ajax-error', {request: e.detail.request});
       },
 
       computeGetThreadUrl: function(threadId){
