--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -451,7 +451,7 @@
 
             onGetStrategyError: function (e) {
                 this.loading = true;
-                this.fire('ajax-error', {response: e.detail.request.response});
+                this.fire('ajax-error', {request: e.detail.request});
             },
 
             onStrategySavedResponse: function (data) {
@@ -476,8 +476,9 @@
         			this.runSwitch =0;
         			this.isRunning = false;
         		}
+
                 this.loading = true;
-                this.fire('ajax-error', {response: e.detail.request.response});
+                this.fire('ajax-error', {request: e.detail.request});
             },
 
             runStrategyFromPanel: function () {
