--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -538,7 +538,7 @@
 
             onGetStrategiesError: function (e) {
                 this.loading = true;
-                this.fire('ajax-error', {response: e.detail.request.response});
+                this.fire('ajax-error', {request: e.detail.request});
             },
 
             openStopDialog: function() {
