--- a/src/components/common/aq-html-display.html
+++ b/src/components/common/aq-html-display.html
@@ -14,26 +14,26 @@
 
         #html-content {
             background-color: white;
-            padding: 10px;
+            --padding: 10px;
         }
 
         polymer-quill-html-render {
             min-height: 100px;
-            font-size: 16px;
+            font-size: var(--font-size, 16px);
             font-family: 'Lato', sans-serif;
             color: black;
-            padding-left: 30px
-            padding-right: 30px;
-            line-height: 24px;
+            padding-left: var(--padding-left, 0px);
+            padding-right: var(--padding-right, 0px);
+            --padding-left: 30px;
+            --padding-right: 30px;
+            line-height: var(--line-height, 24px);
+            background-color: white;
         }
     </style>
 
     <template>
-        <div id='html-content'>      
-            <polymer-quill-html-render 
-                content="[[htmlContent]]">
-            </polymer-quill-html-render>
-        </div>
+        <polymer-quill-html-render content="[[htmlContent]]">
+        </polymer-quill-html-render>
     </template>
 
     <script>
