--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../aq-profile-img.html">
 <link rel="import" href="../common/aq-profile-pic-element.html">
 <link rel="import" href="../common/aq-label-content-item.html">
+<link rel="import" href="../common/aq-html-display.html">
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="aq-community-postdetail-content">
@@ -44,38 +45,24 @@
             --aq-backtest-detail-item-background-color: #fafafb;
         }
 
-        polymer-quill-html-render {
-            --margin-top: 5px;
-            --margin-bottom: 15px;
-            min-height: 100px;
-            font-size: 16px;
-            font-family: 'Lato', sans-serif;
-            color: black;
-            padding-left: 30px
-            padding-right: 30px;
-            line-height: 24px;
-        }
         
         .bar {
             border-bottom: 1px solid #e1e1e1;
-            margin-bottom: 5px
+            margin-bottom: 5px;
         }
 
         #bt-container {
             border-top: 1px solid #e1e1e1;
         }
 
-        #quill {
-        }
-
     </style>
 
     <template>
         <div id='post-content'>      
-            <polymer-quill-html-render 
-                content="[[postContent.markdownText]]">
-            </polymer-quill-html-render>
-            
+            <aq-html-display
+                html-content="[[postContent.markdownText]]">
+            </aq-html-display>
+
             <template is='dom-if' if="[[isValidBacktestId(postContent)]]">
                 <div id='bt-container'>
                     <aq-backtest-detail-item 
