1. Modified log-item(square brackets issue) 2. Bug Fix: in forward-perf item, reference to "forwardtest" instead of "backtest"

--- a/src/components/common/aq-log-item-new.html
+++ b/src/components/common/aq-log-item-new.html
@@ -48,11 +48,11 @@
 
 			<p id='message'>
 				<template is='dom-if' if='[[actualDatetime]]'>
-					<span>&nbsp[[[actualDatetime]]]</span>
+					&nbsp[<span>[[actualDatetime]]</span>]
 				</template>
 
 				<template is='dom-if' if='[[datetime]]'>
-					<span>&nbsp[[[format(datetime)]]]:&nbsp[[message]]</span>
+					&nbsp[<span>[[format(datetime)]]</span>]:&nbsp<span>[[message]]</span>
 				</template>
 
 				<template is='dom-if' if='[[!datetime]]'>
