Bug Fix: added logic to (re)subscribe/unsubscribe when backtest-item is opend/closed

--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -291,6 +291,8 @@
                 } else if (this.dirtyBit == 1) {
                     this.fetchBacktests();
                 }
+
+                this.fire('unsubscribe-all');
 			},
 
 			_strategyIdChanged: function(nId, oId) {
